<resources>
    <string name="app_name">SimpleTest</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">1st Fragmenttt</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">NexT</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello, The Dude</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="phEmail">Email</string>
    <string name="phPassword">Password</string>
    <string name="phConfirm_Password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="loginRedirectText">Already have an account?</string>
    <string name="signUpRedirectText">Do not have an account?</string>
    <string name="all_users">All users</string>
    <string name="add_task">Add Task</string>
    <string name="phTitle">Task Title</string>
    <string name="phDescription">Description</string>
    <string name="view_task">View Tasks</string>
</resources>