<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/flip"
    tools:context=".SignupActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/activity_header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="80dp"
            android:padding="20dp"
            >

            <!--hello msg-->
            <TextView
                android:id="@+id/hi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_second_fragment"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3"

                />

            <!--signUp msg-->
            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/signUp"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.4" />


            <!--            email            -->
            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"

                android:background="@drawable/rounded_edittext"
                android:hint="@string/phEmail"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"

                app:layout_constraintTop_toBottomOf="@id/signUp" />


            <!--            Password            -->
            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"

                android:background="@drawable/rounded_edittext"
                android:hint="@string/phPassword"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textPassword"

                app:layout_constraintTop_toBottomOf="@id/email" />

            <!--            Confirm_Password            -->
            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"

                android:background="@drawable/rounded_edittext"
                android:hint="@string/phConfirm_Password"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textPassword"

                app:layout_constraintTop_toBottomOf="@id/password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUpBtn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"

                android:text="@string/signUp"
                android:background="@drawable/round_button"

                app:layout_constraintTop_toBottomOf="@id/confirm_password"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginRedirectText"
                android:text="@string/loginRedirectText"
                android:layout_gravity="center"
                android:padding="8dp"
                android:textSize="16sp"
                />

        </LinearLayout>
    </LinearLayout>

</ScrollView>